# DocumentationFileReaderApp

./: .buildinfo  .gitignore  .gitlab-ci.yml  README.md  dodo.py  genindex.html  index.html  objects.inv  pyproject.toml  readme.html  search.html  searchindex.js
.github/workflows/: sphinx.yml
docs/source/: conf.py  index.rst
