[tool.poetry]
name = "documentationfilereaderapp"
version = "0.1.0"
description = ""
authors = ["Sylvain Coulibaly"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^5.1.1"
myst-parser = "^0.18.0"
sphinx-autobuild = "^2021.3.14"
doit = "^0.36.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
